--- a/src/containers/faq/style.css
+++ b/src/containers/faq/style.css
@@ -1,5 +1,7 @@
 .all-wrapper{
-    max-width: 1240px;
+    max-width: 1340px;
+    margin-block: 164px;
+    width:100%;
    
 
 padding: 64px 175px 103px 175px;
