--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: Familjen Grotesk;
-  background-color: #9d2b2b;
+  background-color: #ffff;
 }
 *,
 *::before,
@@ -11,8 +11,14 @@ html {
   box-sizing: inherit;
   
 }
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 p {
   margin: 0;
+  width:100%;
 }
 
 root {
@@ -20,7 +26,4 @@ root {
   --text-primary: #2C2B2B;
   --text-secondary: #4B4848;
   
-}
-.allWrapper{
-  width:100%;
 }
