--- a/src/containers/mainBackground/style.css
+++ b/src/containers/mainBackground/style.css
@@ -6,6 +6,9 @@
   height: auto;
    display: block;
    position:relative;
+   top:200px;
+   margin-bottom: 95px;;
+  
   
 
    
@@ -19,11 +22,11 @@
   }
    
 .small-container{
-    position: absolute;
+    position:absolute;
     max-width: 826px;
     width:100%;
     height:100%;
-    top:200px;
+    top:300px;
     left:100px;
 max-height: 402px;
 border-radius: 12px;
@@ -31,7 +34,7 @@ background: rgba(0, 0, 0, 0.50);
 z-index: 10;
 padding:24px 33px 40px 32px;
 }
-.small-container h1{
+.small-container >.text{
     max-width: 620px;
     color: #FFF;
 font-family: Familjen Grotesk;
@@ -40,6 +43,7 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 margin-bottom: 38px;
+text-align:left ;
 }
 
 .small-container p{
