--- a/src/containers/mainBackground/style.css
+++ b/src/containers/mainBackground/style.css
@@ -2,7 +2,7 @@
     max-width:100%;
   
    background-size: cover;
-  width:100vw;
+  width:100%;
   height: auto;
    display: block;
    position:relative;
@@ -18,15 +18,15 @@
 
 .custom-image {
     width: 100%;
-    height: auto;
+    max-height: 848px;
   }
    
 .small-container{
     position:absolute;
     max-width: 826px;
-    width:100%;
-    height:100%;
-    top:300px;
+  
+    max-height:402px;
+    top:200px;
     left:100px;
 max-height: 402px;
 border-radius: 12px;
