--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,3 +1,10 @@
+.main-container{
+    width:100%;
+    
+}
+.textLogoWrapper{
+    width:100%;
+}
 .title-wrapper{
     color: #292D32;
 font-family: Familjen Grotesk;
@@ -85,4 +92,211 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 
+}
+.facilities-wrapper{
+    width:100%;
+   padding:0px 100px;
+   flex:1;
+  
+    display:flex;
+    align-items: center;
+    overflow: hidden;
+   
+    max-height:640px;
+
+}
+.left-container-picture{
+
+
+    width:100%;
+    position: relative;
+    max-height:auto;
+    display: block;
+
+   
+}
+.gym-picture{
+    width: 100%;
+object-fit: cover;
+max-height: 640px;
+display: block;
+height: 100vh;
+ 
+   
+   
+}
+.restaurant-picture{
+    width: 100%;
+    max-height: 320px;
+    display: block;
+    height: 100vh;
+   
+}
+.bar-picture{
+    width: 100%;
+    max-height: 320px;
+    display: block;
+    height: 100vh;
+   
+   
+}
+.image-caption{
+position: absolute;
+bottom: 0;
+left:0;
+display: flex;
+width: 100%;
+padding: 16px 24px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 8px;
+background: rgba(255, 255, 255, 0.50);
+}
+.facilities-heading{
+    color: #2C2B2B;
+font-family: Familjen Grotesk;
+font-size: 32px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.facilities-heading > p{
+    color: var(--text-primary, #2C2B2B);
+font-family: Familjen Grotesk;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.right-wrapper{
+ 
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    max-height:640px;
+   
+    display: block;
+    overflow: hidden;
+
+}
+.first-right-container-picture{
+   max-height: 320px;
+    width:100%;
+    position: relative;
+}
+.hall-wrapper{
+    width:100%;
+   display:flex;
+
+   justify-content: space-between;
+   width: 100%;
+   padding-inline: 100px;
+   gap:48px;
+
+  
+}
+.hall-image-wrapper{
+    max-height: 550px;
+    width:100%;
+    overflow: hidden;
+ 
+}
+.hall-image-wrapper .hall-image{
+    width: 100%;
+ 
+    display: block;
+    height: auto;
+ 
+}
+.hall-content{
+
+  width:100%;
+  max-width:650px;
+    padding: 40px 100px 149px 0px;
+
+
+}
+.hall-content .revolve{
+    display: flex;
+    flex-direction: column;
+    gap:16px;
+   
+}
+.hall-content h4{
+    color:  #2C2B2B;
+font-family: Familjen Grotesk;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+#iconWrapper{
+display: flex;
+    gap:16px;
+    flex-direction: row;
+    width:100%;
+   
+   
+    
+}
+#iconWrapper img{
+    width: 24px;;
+}
+#iconWrapper>  p{
+    color:  #4B4848;
+font-family: Familjen Grotesk;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+h5{
+    color:  #2C2B2B;
+font-family: Familjen Grotesk;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: 0.99px;
+margin: 20px 0 12px 0;
+}
+.plan_container{
+    display:flex;
+    gap:16px;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 20px;
+   
+}
+h6,.details{
+    color:  #4B4848;
+font-family: Familjen Grotesk;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width:100%;
+}
+.dotWrapper{
+    display: flex;
+        gap:16px;
+      align-items: center;
+        width:100%;
+       
+       
+        
+    }
+    .dotWrapper .dot{
+    width:4px;
+    height: 4px;
+    border-radius: 50%;
+    background: #000;
+}
+.experience_wrapper{
+    width:100%
 }
