--- a/Client/src/containers/layouts/mainPage/style.css
+++ b/Client/src/containers/layouts/mainPage/style.css
@@ -1,12 +1,14 @@
 .layout-container{
     display: flex;
-  flex-flow: column;
-  width: 100%;
-  
+    flex-flow: column;
+    width: 100%;
+    height: 100%
 }
 header{
     width:100%;
-    
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 footer{
     width:100%;
@@ -19,5 +21,6 @@ footer{
     justify-content: center;;
 }
 body{
+    position: relative;
     width:100%;
 }
