--- a/Client/src/components/miniDescription/style.css
+++ b/Client/src/components/miniDescription/style.css
@@ -1,12 +1,19 @@
 .miniDesc{
     display: flex;
     width: 100%;
-}
-.miniDesc img{
 
 }
+.miniDesc img{
+    margin-right: 20px;
+}
 .miniDesc p{
-    background-color: blueviolet;
-    color: crimson
-    
+    width: fit-content;
+    color: black;
+    text-align: center;
+    font-family: Familjen Grotesk;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    max-width: 650px;
 }
