--- a/Client/src/components/cards/hotelCard/style.css
+++ b/Client/src/components/cards/hotelCard/style.css
@@ -1,43 +1,51 @@
-.Wrapper{
-    padding: 24px;
-    max-width: 397px;
+.Wrapper {
+    width: auto;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 12px;
-    justify-content: center;
-    border-radius: 12px;
-background: #FFF;
+    /* gap: 0.5rem; */
+    justify-content: space-around;
+    border-radius: 1rem;
+    background: #FFF;
 }
-.image-wrapper{
+
+.image-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+.image-wrapper img{
+    border-radius: 0.5rem;
+}
 
 
-.title{
-    color:  #2C2B2B;
+.cardTtitle {
+    color: #2C2B2B;
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     margin-bottom: 30px;
+    padding: 0rem 1rem;
 }
 
-.lower-wrapper{
-display:flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 16px;
-margin-bottom: 20px;
+.lower-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    margin-bottom: 20px;
+    padding: 0.4rem;
 
 }
-.icon-text{
+
+.icon-text {
     display: flex;
     align-items: center;
-    gap:16px;
+    gap: 16px;
 }
-.icon-text > p{
+
+.icon-text p {
     color: var(--text-secondary, #4B4848);
     font-family: Familjen Grotesk;
     font-size: 18px;
@@ -45,46 +53,43 @@ margin-bottom: 20px;
     font-weight: 400;
     line-height: normal;
 }
-.icon{
+
+.icon {
     height: 4px;
     width: 4px;
     border-radius: 50%;
     background-color: #2C2B2B;
 }
-.lowest-wrapper{
-    display:flex;
+
+.lowest-wrapper {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
-    
-    }
-    h2{
-        color: var(--text-primary, #2C2B2B);
-font-family: Familjen Grotesk;
-font-size: 18px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-letter-spacing: 0.99px;
-margin-top: 24px;
-margin-bottom: 12px;
-    }
-    .lastWrapper{
-        margin-top: 40px;
-        width:100%;
-        display:flex;
-        align-items: center;
-        justify-content: space-between;
-      
-    }
-    .price{
-        color: var(--text-primary, #2C2B2B);
-font-family: DM Sans;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-    }
-.buttonWrapper{
-    width:100%;
+
+}
+
+h2 {
+    color: var(--text-primary, #2C2B2B);
+    font-family: Familjen Grotesk;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.99px;
+    margin-top: 24px;
+    margin-bottom: 12px;
+}
+
+.lastWrapper {
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.buttonWrapper {
+    width: 100%;
 }
