--- a/Client/src/containers/AccomBackground/accomStyle.css
+++ b/Client/src/containers/AccomBackground/accomStyle.css
@@ -1,35 +1,54 @@
+/* Div with background image */
 .imageWrapperA {
+  width: 100%;
+  height: 20vh;
+  background-image: url('../../assets/png/background.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+/* Black Div on-top of image */
+.small-containerA {
+  position: relative;
+  width: 50%;
+  height: 40%;
+  border-radius: 12px;
+  background: rgba(0, 0, 0, 0.50);
+  z-index: 10;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* h2 title inside black div */
+.small-containerA h2 {
+  color: #FFF;
+  font-family: Familjen Grotesk;
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 38px;
+  text-align: left;
+}
+
+/* Ipads */
+@media (max-width: 991px) {
+  .small-containerA  {
+    margin-right: 0rem;
+  }
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+  .small-containerA  {
     width: 100%;
-    height: 40vh;
-    background-image: url('../../assets/png/background.jpeg'); /* Replace with the actual path to your image file */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    margin: 1rem;
   }
-  
-  .small-containerA {
-    position: relative;
-    max-width: 826px;
-    width: 100%;
-    text-align: center;
-    padding: 24px 33px 40px 32px;
-    background: rgba(0, 0, 0, 0.50);
-    border-radius: 12px;
-    z-index: 10;
-  }
-  
-  .textA {
-    max-width: 620px;
-    color: #FFF;
-    font-family: Familjen Grotesk;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-bottom: 38px;
-  }
-  
+}
