--- a/Client/src/containers/layouts/mainPage/style.css
+++ b/Client/src/containers/layouts/mainPage/style.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-flow: column;
     width: 100%;
-    height: 100%
+    height: 100%;
+    /* overflow-x: hidden; */
 }
 header{
     width:100%;
