--- a/Client/src/containers/mainBackground/mainStyle.css
+++ b/Client/src/containers/mainBackground/mainStyle.css
@@ -1,36 +1,35 @@
+/* Div with background image */
 .imageWrapper {
-    max-width: 100%;
+    width: 100%;
+    height: 40vh;
+    background-image: url('../../assets/png/background.jpeg');
+    /* path to image file */
     background-size: cover;
-    width: 100vw;
-    height: auto;
-    display: block;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
 }
 
-.custom-image {
-    width: 100%;
-    height: auto;
-}
-
+/* Black Div on-top of image */
 .small-container {
-    position: absolute;
-    max-width: 826px;
-    width: 100%;
-    height: 100%;
-    top: 300px;
-    left: 100px;
-    max-height: 402px;
+    position: relative;
+    width: 50%;
+    height: 80%;
     border-radius: 12px;
     background: rgba(0, 0, 0, 0.50);
     z-index: 10;
     padding: 24px 33px 40px 32px;
+    margin-right: 20rem;
 }
 
-.small-container>.text {
-    max-width: 620px;
+/* h2 title inside black div */
+.small-container h2 {
     color: #FFF;
     font-family: Familjen Grotesk;
-    font-size: 64px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -38,6 +37,7 @@
     text-align: left;
 }
 
+/* p inside black div */
 .small-container p {
     color: #FFF;
     font-family: Familjen Grotesk;
@@ -46,4 +46,18 @@
     font-weight: 400;
     line-height: normal;
     max-width: 650px;
+}
+
+/* Ipads */
+@media (max-width: 991px) {
+    .small-container {
+        margin-right: 0rem;
+    }
+}
+/* Mobile */
+@media (max-width: 767px) {
+    .small-container {
+        width: 100%;
+        margin: 1rem;
+    }
 }
