--- a/Client/src/containers/AccomBackground/accomStyle.css
+++ b/Client/src/containers/AccomBackground/accomStyle.css
@@ -34,8 +34,8 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 38px;
-  text-align: left;
+  text-align: center;
+  justify-content: center;
 }
 
 /* Ipads */
