--- a/Client/src/containers/header/style.css
+++ b/Client/src/containers/header/style.css
@@ -6,8 +6,7 @@
     width: 100%;
     height: 10vh;
     padding: 2rem;
-    /* background: #FFF; */
-    background-color: gray;
+    background: #FFF;
     color: #2C2B2B;
 }
 
