--- a/src/components/accordion/style.css
+++ b/src/components/accordion/style.css
@@ -1,11 +1,12 @@
 
-.all-container{
+.all-containers{
    
   max-width: 100%;
     display: flex;
     
 flex-direction: column;
-gap:24px;
+
+
 
 
 
@@ -23,7 +24,8 @@ gap:24px;
 justify-content: space-between;
 align-items: center;
 
-gap:56px;
+
+gap:24px;
 
 }
 .question {
@@ -33,6 +35,9 @@ font-size: 24px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
+@media screen and (max-width: 700px) {
+   font-size: 18px;
+  }
 }
 .ImageWrapper{
 display: flex;
@@ -42,7 +47,7 @@ padding: 8px;
 justify-content: center;
 align-items: center;
 border-radius: 40px;
-border:1px solid blue;
+
 
 background: #FFF;
 
@@ -56,6 +61,9 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
+@media screen and (max-width: 700px) {
+   font-size: 14px;
+  }
 
 
 }
