--- a/src/components/cards/hotelCard/style.css
+++ b/src/components/cards/hotelCard/style.css
@@ -15,13 +15,15 @@ background: #FFF;
 }
 
 
-.title{
+.Wrapper .title{
     color:  #2C2B2B;
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     margin-bottom: 30px;
+    width:100%;
+  
 }
 
 .lower-wrapper{
@@ -75,6 +77,7 @@ margin-bottom: 12px;
         display:flex;
         align-items: center;
         justify-content: space-between;
+        
       
     }
     .price{
@@ -85,6 +88,3 @@ font-style: normal;
 font-weight: 500;
 line-height: normal;
     }
-.buttonWrapper{
-    width:100%;
-}
