--- a/src/containers/faq/style.css
+++ b/src/containers/faq/style.css
@@ -2,6 +2,9 @@
     max-width: 1340px;
     margin-block: 164px;
     width:100%;
+    @media screen and (max-width: 800px) {
+        margin-top: 80px;
+        }
    
 
 padding: 64px 175px 103px 175px;
@@ -12,7 +15,9 @@ gap: 32px;
 border-radius: 40px;
 background: #FBD0D5;
 
-
+@media screen and (max-width: 1000px) {
+    padding-inline:40px;
+border-radius: 24px;}
 }
 .heading{
     width:100%;
@@ -25,6 +30,10 @@ font-size: 56px;
 font-style: normal;
 font-weight: 600;
 line-height: normal;
+
+@media screen and (max-width: 800px) {
+    font-size: 28px;
+    }
 }
 .question-container{
 
