--- a/src/containers/header/style.css
+++ b/src/containers/header/style.css
@@ -13,15 +13,24 @@
     left:0;
     z-index:20;
    
+    overflow-x: hidden;
+    @media screen and (max-width: 800px) {
+        padding: 54px 16px 32px 16px;
+    
+      }
 
 }
 .innerWrapper{
     display: flex;
-    justify-content: space-between;
+   
+   justify-content: space-between;
+   overflow: hidden;
     width: 100%;
     align-items: center;
+     
+    
 }
-.logoWrapper{
+.logoWrapper, .harmburgerWrapper{
     display: flex;
 justify-content: center;
 align-items: center;
@@ -40,7 +49,15 @@ line-height: normal;
 .linkWrapper{
     display: flex;
     align-items: center;
-    gap:24px;
+ 
+    max-width: max-content;
+  gap: 24px;
+  @media screen and (max-width: 1305px) {
+    display:none;
+   
+     }
+
+    
 }
 .linkWrapper p{
     color: #4B4848;
@@ -49,11 +66,17 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
+width: 100%;
 }
 .subWrapper{
     display: flex;
     align-items: center;
     gap:48px;
+    white-space: nowrap;
+    @media screen and (max-width: 1305px) {
+        display:none;
+       
+         }
 }
 
 .text{
@@ -63,4 +86,5 @@ font-size: 18px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
+cursor: pointer;
 }
