--- a/src/containers/mainBackground/style.css
+++ b/src/containers/mainBackground/style.css
@@ -6,10 +6,13 @@
   height: auto;
    display: block;
    position:relative;
-   top:200px;
+   top:176px;
    margin-bottom: 95px;;
   
-  
+   @media screen and (max-width: 800px) {
+  top:142px;
+
+  }
 
    
    
@@ -33,6 +36,23 @@ border-radius: 12px;
 background: rgba(0, 0, 0, 0.50);
 z-index: 10;
 padding:24px 33px 40px 32px;
+@media screen and (max-width: 800px) {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+   
+  
+    }
+    @media screen and (max-width: 340px) {
+        
+        width: 90%;
+        max-height:90%;
+        padding:14px 23px 30px 22px;
+       
+      
+        }
+    
 }
 .small-container >.text{
     max-width: 620px;
@@ -44,6 +64,18 @@ font-weight: 700;
 line-height: normal;
 margin-bottom: 38px;
 text-align:left ;
+@media screen and (max-width: 800px) {
+    font-size: 28px;
+    margin-bottom: 10px;
+    }
+    @media screen and (max-width: 1100px) {
+      font-size: 40px;
+    
+      }
+      @media screen and (max-width: 600px) {
+        font-size: 18px;
+      
+        }
 }
 
 .small-container p{
@@ -54,4 +86,16 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 max-width: 650px;
+@media screen and (max-width: 800px) {
+    font-size: 14px;
+  
+    }
+    @media screen and (max-width: 1100px) {
+      font-size: 16px;
+    
+      }
+      @media screen and (max-width: 600px) {
+        font-size: 14px;
+      
+        }
 }
