--- a/src/containers/otherBg/style.css
+++ b/src/containers/otherBg/style.css
@@ -5,13 +5,16 @@
   width:100%;
   height: auto;
    position:relative;
-   top:200px;
+   top:176px;
    margin-bottom: 110px;
    display: flex;
       align-items: center;
       justify-content: center;
   
-
+      @media screen and (max-width: 800px) {
+        top:142px;
+      
+        }
    
   
   
@@ -68,5 +71,13 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 margin: 24px 0px 24px 0px;
+@media screen and (max-width: 800px) {
+  font-size: 28px;
+
+  }
+  @media screen and (max-width: 1100px) {
+    font-size: 40px;
+  
+    }
 }
 
