--- a/src/components/input/style.css
+++ b/src/components/input/style.css
@@ -187,4 +187,59 @@ height:auto;
   line-height: 21px;
   color: #4e5152;
 }
+.ShowListIcon {
+background: #ffffff;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 10%;
+cursor: pointer;}
+
+.DropDown {
+background: #ffffff;
+border: 1px solid #e1e1de;
+position: absolute;
+width: 100%;
+height: 180px;
+top: 80px;
+overflow-y: auto;
+right: 1px;
+z-index: 5;
+padding: 10px 0px;
+border-radius: 0 0 8px 8px;
+box-shadow: 0 15px 15px #00000011;
+
+}
+
+.ListItems {
+gap: 10px;
+display: flex;
+flex-direction: column;
+
+}
+
+.ListItem {
+display: flex;
+gap: 10px;
+padding: 14px 10px;
+align-items: center;
+font-size: 14px;
+
+
+&:hover {
+  background-color: rgba(0, 162, 212, 0.1);
+  cursor: pointer;
+}
+}
+
+ .InvisibleBackDrop {
+background-color: transparent;
+position: fixed;
+top: 0;
+left: 0;
+height: 100%;
+width: 100%;
+z-index: 3;
+
+ }
 
