--- a/src/features/hall/style.css
+++ b/src/features/hall/style.css
@@ -6,6 +6,17 @@
    width: 100%;
    padding-inline: 100px;
    gap:48px;
+   @media screen and (max-width: 980px) {
+    
+    padding-inline:50px;
+   }
+   @media screen and (max-width: 800px) {
+    
+    padding-inline:20px;
+    flex-direction: column;
+    gap:24px;
+   }
+
 
   
 }
@@ -19,14 +30,16 @@
     width: 100%;
  
     display: block;
-    height: auto;
+    max-height: 100%;
+    
  
 }
 .hall-content{
 
   width:100%;
-  max-width:650px;
+  max-width:400px;
     padding: 40px 100px 149px 0px;
+    
 
 
 }
