--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -4,8 +4,7 @@
 }
 .textLogoWrapper{
     width:100%;
-}
-.title-wrapper{
+}.first-title-wrapper{
     color: #292D32;
 font-family: Familjen Grotesk;
 font-size: 56px;
@@ -17,6 +16,33 @@ margin-bottom:48px ;
 text-align: center;
 width:100%;
 
+   @media screen and (max-width: 800px) {
+    margin-top:50px;
+margin-bottom:0px ;
+font-size: 40px;
+    
+   }}
+
+.title-wrapper{
+    color: #292D32;
+font-family: Familjen Grotesk;
+font-size: 56px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin-top:60px;
+margin-bottom:48px ;
+text-align: center;
+width:100%;
+
+   @media screen and (max-width: 800px) {
+    margin-top:0px;
+margin-bottom:0px ;
+font-size: 40px;
+    
+   }
+
+
 
 }
 .textLogoWrapper{
@@ -27,11 +53,23 @@ width:100%;
 .card-wrapper{
     width:100%;
     display: flex;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
     padding-inline: 100px;
     /* border:1px solid red; */
     margin-bottom: 107px;
+    row-gap: 48px;
+    @media screen and (max-width: 993px) {
+    
+        padding-inline:50px;
+       }
+       @media screen and (max-width: 892px) {
+        justify-content: center;
+        
+       
+       }
+    
 }
 .map-wrapper{
     width:100%;
@@ -42,13 +80,32 @@ width:100%;
    padding-inline: 100px;
    gap:48px;
    margin-bottom: 110px;
+   @media screen and (max-width: 980px) {
+    
+    padding-inline:50px;
+   }
+   @media screen and (max-width: 800px) {
+    
+    padding-inline:20px;
+    flex-direction: column;
+   }
+}
+.mapContainer{
+    width: 100%;
 }
 .right-container{
-    width:100%;
+    width:70%;
     display: flex;
     flex-direction: column;
    text-align: left;
     padding-right:28px;
+    @media screen and (max-width: 800px) {
+   display: flex;
+   align-items: flex-start;
+       
+       width:100%;
+        
+       }
    
 }
 .heading-wrapper{
@@ -103,8 +160,16 @@ line-height: normal;
     overflow: hidden;
    
     max-height:640px;
+    @media screen and (max-width: 800px) {
+       flex-direction: column;
+       max-height: 100%;
+       gap:24px;
+       padding:0px;
+      }}
+  
 
-}
+
+
 .left-container-picture{
 
 
@@ -112,6 +177,11 @@ line-height: normal;
     position: relative;
     max-height:auto;
     display: block;
+    @media screen and (max-width: 800px) {
+       
+        max-height: auto;
+        
+       }
 
    
 }
@@ -150,7 +220,7 @@ padding: 16px 24px;
 flex-direction: column;
 justify-content: center;
 align-items: flex-start;
-gap: 8px;
+
 background: rgba(255, 255, 255, 0.50);
 }
 .facilities-heading{
@@ -178,6 +248,11 @@ line-height: normal;
     justify-content: flex-start;
     width: 100%;
     max-height:640px;
+    @media screen and (max-width: 800px) {
+        max-height: auto;
+       
+       
+       }
    
     display: block;
     overflow: hidden;
@@ -188,6 +263,16 @@ line-height: normal;
     width:100%;
     position: relative;
 }
+.second-right-container-picture{
+    max-height: 320px;
+     width:100%;
+     position: relative;
+     @media screen and (max-width: 800px) {
+        margin-top: 24px;
+        max-height: auto;
+       }
+    
+ }
 .hall-wrapper{
     width:100%;
    display:flex;
