--- a/client/src/components/cards/hotelCard/style.css
+++ b/client/src/components/cards/hotelCard/style.css
@@ -14,6 +14,8 @@ background: #FFF;
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 345px;
+    overflow: hidden;
 }
 
 
