--- a/client/src/pages/reservation/style.css
+++ b/client/src/pages/reservation/style.css
@@ -21,3 +21,31 @@ margin-bottom: 18px;
 width: 100%;
 text-align: center;
 }
+.fullLength{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.meal_LinkWrapper{
+    display: flex;
+   
+width: fit-content;
+justify-content: center ;
+height:56px;
+border-radius: 12px;
+border: 2px solid #700511;
+
+
+
+align-items: center;
+}
+.firstNav{
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+ height: 44px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
