--- a/client/src/components/input/style.css
+++ b/client/src/components/input/style.css
@@ -1,8 +1,6 @@
-
-
 .InputWrapper {
-  border:1px solid #4B4848;
-width:100%;
+  border: 1px solid #4B4848;
+  width: 100%;
 
   align-items: center;
   display: flex;
@@ -11,7 +9,7 @@ width:100%;
   padding: 8px 24px;
   height: 48px;
   transition: 0.3s all ease;
-  background-color:  "#f2f2f2";
+  background-color: "#f2f2f2";
 
   &:focus {
     outline: none;
@@ -22,9 +20,10 @@ width:100%;
     height: 48px;
   }
 }
-.InputWrapper.error{
-  border:1px solid red;
-width:100%;
+
+.InputWrapper.error {
+  border: 1px solid red;
+  width: 100%;
 
   align-items: center;
   display: flex;
@@ -33,7 +32,7 @@ width:100%;
   padding: 8px 24px;
   height: 48px;
   transition: 0.3s all ease;
-  background-color:  "#f2f2f2";
+  background-color: "#f2f2f2";
 
   &:focus {
     outline: none;
@@ -44,9 +43,10 @@ width:100%;
     height: 48px;
   }
 }
-.InputWrapper.warning{
-  border:1px solid yellow;
-width:100%;
+
+.InputWrapper.warning {
+  border: 1px solid yellow;
+  width: 100%;
 
   align-items: center;
   display: flex;
@@ -55,7 +55,7 @@ width:100%;
   padding: 8px 24px;
   height: 48px;
   transition: 0.3s all ease;
-  background-color:  "#f2f2f2";
+  background-color: "#f2f2f2";
 
   &:focus {
     outline: none;
@@ -70,12 +70,12 @@ width:100%;
 
 
 .custom-div {
-  width:100%;
+  width: 100%;
   display: flex;
   flex-flow: column;
   gap: clamp(8px, 0.8px, 12px);
   margin-bottom: 24px;
-height:auto;
+  height: auto;
   position: relative;
 
   @media screen and (max-width: 600px) {
@@ -87,9 +87,9 @@ height:auto;
 
 
 
- .Input {
+.Input {
   color: #4e5152;
-  border:1px solid black;
+  border: 1px solid black;
   height: 48px;
   width: 90%;
   border: none;
@@ -97,8 +97,8 @@ height:auto;
   outline: none;
   font-weight: 400;
   font-size: 14px;
-  width:100%;
-  
+  width: 100%;
+
 
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
@@ -157,6 +157,7 @@ height:auto;
   }
 
 }
+
 .ErrMsg {
   position: relative;
   color: red;
@@ -164,7 +165,8 @@ height:auto;
   justify-content: center;
   align-items: center;
 }
-.WarnMsg{
+
+.WarnMsg {
   position: relative;
   color: #d77000;
   font-size: 12px;
@@ -187,61 +189,72 @@ height:auto;
   line-height: 21px;
   color: #4e5152;
 }
+
 .ShowListIcon {
-background: #ffffff;
-display: flex;
-justify-content: center;
-align-items: center;
-width: 10%;
-cursor: pointer;}
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  cursor: pointer;
+}
 
 .DropDown {
-background: #ffffff;
-border: 1px solid #e1e1de;
-position: absolute;
-width: 100%;
-height: 180px;
-top: 50px;
-overflow-y: auto;
-right: 1px;
-z-index: 1000;
-padding: 10px 0px;
-border-radius: 0 0 8px 8px;
-box-shadow: 0 15px 15px #00000011;
+  /* background-color: #d77000; */
+  background: #ffffff;
+  border: 1px solid #e1e1de;
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  top: 75px;
+  overflow-y: auto;
+  right: 1px;
+  z-index: 1000;
+  padding: 10px 0px;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 15px 15px #00000011;
+  padding: 1rem;
 
 }
 
 .ListItems {
-gap: 10px;
-display: flex;
-flex-direction: column;
-
+  /* gap: 10px; */
+  display: flex;
+  flex-direction: column;
+  /* background-color: blueviolet; */
 
 }
 
 .ListItem {
-display: flex;
-gap: 10px;
-padding: 14px 10px;
-align-items: center;
-font-size: 14px;
-z-index: 100000; 
+  display: flex;
+  gap: 10px;
+  padding: 14px 10px;
+  align-items: center;
+  font-size: 14px;
+  z-index: 100000;
 
 
-&:hover {
-  background-color: rgba(0, 162, 212, 0.1);
-  cursor: pointer;
+  &:hover {
+    background-color: rgba(0, 162, 212, 0.1);
+    cursor: pointer;
+  }
 }
+
+.InvisibleBackDrop {
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
+
 }
 
- .InvisibleBackDrop {
-background-color: transparent;
-position: fixed;
-top: 0;
-left: 0;
-height: 100%;
-width: 100%;
-z-index: 3;
-
- }
-
+.dropDownW {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
