--- a/client/src/containers/layouts/mainPage/style.css
+++ b/client/src/containers/layouts/mainPage/style.css
@@ -1,25 +1,29 @@
-.layout-container{
+.layout-container {
     display: flex;
-  flex-flow: column;
-  width: 100%;
-  min-height: 100vh;
-  height: 100%;
-  
+    flex-flow: column;
+    width: 100%;
+    min-height: 100vh;
+    height: 100%;
+
 }
-header{
-    width:100%;
-    
+
+header {
+    width: 100%;
+
 }
-footer{
-    width:100%;
-    
+
+footer {
+    width: 100%;
+
 }
-.faq-section{
-    width:100%;
-    display:flex;
-    align-items: center ;
-    justify-content: center;;
+
+.faq-section {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-body{
-    width:100%;
+
+main {
+    width: 100%;
 }
