--- a/client/src/pages/receptionist/style.css
+++ b/client/src/pages/receptionist/style.css
@@ -1,44 +1,46 @@
-.statusWrapper{
-    
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        row-gap: 40px;
-    
-        padding-inline: 100px;
-      
-        margin-top: 50px;
-        margin-bottom: 40px;
+.statusWrapper {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    row-gap: 40px;
+    padding-inline: 100px;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
-.statusCardContainer{
+
+.statusCardContainer {
     width: 100%;
     border-radius: 24px;
-background: #FFF;
-padding: 32px;
+    background: #FFF;
+    padding: 32px;
 }
-.filterflex{
+
+.filterflex {
     display: flex;
-    width:100%;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
 
 }
-.rightTitle{
+
+.rightTitle {
     color: var(--text-secondary, #4B4848);
-font-family: Familjen Grotesk;
-font-size: 24px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
+    font-family: Familjen Grotesk;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
-.cardMap{
-   display:flex;
-   align-items: flex-start; 
-   justify-content: center;
-   gap:16px;
-   width:100%;
-   flex-direction: column;
-  
+
+.cardMap {
+    /* display:flex; */
+    align-items: flex-start;
+    justify-content: center;
+    gap: 16px;
+    width: 100%;
+    /* flex-direction: column; */
+    /* max-height: 40vh; */
+    /* overflow-x: scroll; */
 }
