--- a/client/src/components/activeNavlink/style.css
+++ b/client/src/components/activeNavlink/style.css
@@ -26,7 +26,7 @@ line-height: normal;
 
   align-items: center;
   justify-content: center;
-  padding-inline: 20px;
+  /* padding-inline: 20px; */
  
 
   
